<resources>
    <string name="app_name" translatable="false">SensorInfo</string>
    <string name="home">Home</string>
    <string name="itemText" translatable="false">sampleText</string>

    <string name="nav_button_open">"Open the sensor list</string>
    <string name="nav_button_close">"Close the sensor list</string>

    <string name="sensor_name">SensorName: </string>
    <string name= "sensor_vendor">Vendor: </string>
    <string name= "sensor_version">Version: </string>
    <string name= "sensor_maxrange">Max Range: </string>
    <string name= "sensor_resolution">Resolution: </string>
    <string name= "sensor_power">Current: </string>

    <string name= "ACCELEROMETER_NAME">Accelerometer</string>
    <string name= "ACCELEROMETER_DESC">Accelerometer mesures acceleration along the three axis.</string>

    <string name= "GYROSCOPE_NAME">Gyroscope</string>
    <string name= "GYROSCOPE_DESC">Gyroscope is a device used for measuring or maintaining orientation and angular velocity. The values are the three axis of angular speed.</string>


    <string name= "PROXIMITY_NAME">Proximity</string>
    <string name= "PROXIMITY_DESC">Proximity sensor mesures the distance of an object from the front of the phone.</string>
    <string name= "PROXIMITY_NEAR">Near</string>
    <string name= "PROXIMITY_FAR">Far</string>


    <string name= "MAGNETOMETER_NAME">Magnetic field</string>
    <string name= "MAGNETOMETER_DESC">Magnetometer mesures the magnetic field along the three axis.</string>


    <string name= "LIGHT_NAME">Light </string>
    <string name= "LIGHT_DESC">Light sensor measures the light level front of the phone.</string>


    <string name= "ORIENTATION_NAME">Orientation sensor</string>
    <string name= "ORIENTATION_DESC">Orientation sensor shows the orientation of the device with respect to the Earth.</string>
    <string name= "ORIENTATION_NORTH">North</string>
    <string name= "ORIENTATION_NORTHEAST">North-East</string>
    <string name= "ORIENTATION_EAST">East</string>
    <string name= "ORIENTATION_EASTSOUTH">East-South</string>
    <string name= "ORIENTATION_SOUTH">South</string>
    <string name= "ORIENTATION_SOUTHWEST">South-West</string>
    <string name= "ORIENTATION_WEST">West</string>
    <string name= "ORIENTATION_WESTNORTH">West-North</string>



    <string name="HomeDesc">SensorInfo app can show the values of your phone\'s basic sensors.\n
        Supported sensors:\n
- Accelerometer\n
- Light sensor\n
- Proximity sensor\n
- Magnetometer\n
- Gyroscope\n
- Compass </string>

    <string name="HelpDesc">From the left side in the navigation bar the user can see the available sensors.\nThe user can select the sensor from it and can see the raw values from the sensor and the info of the sensors.</string>
    <string name="HelpDesc2" translatable="false">SensorInfo Github:\nhttps://github.com/kecspeter/SensorInfo</string>
    <string name="HomeTitle" translatable="false">SensorInfo</string>
    <string name="option_menu_settings">Settings</string>
    <string name="option_menu_help">Help and About</string>

    <string name="settings_categoryTitle_mode">Mode change</string>
    <string name="settings_proximity_mode">Proximity display mode</string>
    <string name="settings_proximity_mode_summary">Use numeric value instead of NEAR or FAR.</string>
    <string name="settings_categoryTitle_unit">Unit of mesurement</string>
    <string name="settings_unit_length">Length</string>
    <string name="settings_unit_length_summary">Select the unit of length</string>
    <string name="settings_unit_angle">Angle</string>
    <string name="settings_unit_angle_summary">Select the unit of angle</string>
    <string name="settings_unit_magnet">Magnetic field</string>
    <string name="settings_unit_magnet_summary">Select the unit of magnetic field</string>

</resources>
